--- a/src/components/styles/style.scss
+++ b/src/components/styles/style.scss
@@ -1,19 +1,19 @@
 
 
-.container{
-    top: 30%;
-    text-align: center;
-    background: rgb(245 240 241);
-    margin: 2rem auto;
-    width: 35rem;
-    height: auto;
-    padding: 1em;
-    border: 1px solid #ccc;
-    border-radius: 1em;
-    display: grid;
-    align-items: end;
-    justify-content: space-around;
-  }
+// .container{
+//     top: 30%;
+//     text-align: center;
+//     background: rgb(245 240 241);
+//     margin: 2rem auto;
+//     width: 35rem;
+//     height: auto;
+//     padding: 1em;
+//     border: 1px solid #ccc;
+//     border-radius: 1em;
+//     display: grid;
+//     align-items: end;
+//     justify-content: space-around;
+//   }
   .search-bar{
     margin: 1rem;
       padding: 1rem;
